--- a/.github/workflows/continuous_deployment_test.yml
+++ b/.github/workflows/continuous_deployment_test.yml
@@ -3,13 +3,14 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_TEST }}
 on:
-  push:
-    branches:
-      - master
-
-  pull_request:
-    branches:
-      - master
+  workflow_run:
+    workflows: ['CI']
+    types:
+      - completed
+  release:
+    types: [published]
+  workflow_dispatch:
+    
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
