--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -1,12 +1,9 @@
-name: CI
-
+name: C_I
 on:
   push:
     branches: [ master ]
-
   pull_request:
     branches: [ master ]
-
 jobs:
     lint:
       runs-on: ubuntu-latest
