--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "npm run lint",
     "lint": "eslint .",
     "cypress": "cross-env NODE_ENV=test && cypress open",
-    "test": "cypress run",
+    "test": "jest",
+    "test:component": "cypress run --component",
     "test:e2e": "start-server-and-test dev http://localhost:3000 cypress"
   },
   "dependencies": {
@@ -18,27 +19,40 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "start-server-and-test": "^2.0.8",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.16.0",
+    "@jest/globals": "^29.7.0",
     "@next/eslint-plugin-next": "^15.0.4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "cypress": "^13.16.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.4",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next": "^15.0.4",
     "postcss": "^8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^8.18.0"
   }
